fix text-align

--- a/app/components/DynamicReport/css/DynamicReport.css
+++ b/app/components/DynamicReport/css/DynamicReport.css
@@ -16,6 +16,7 @@
     margin-top: 1px;
     margin-bottom: 1px;
     line-height: 34px;
+    text-align: left;
 }
 
 .dr-tab-active {
